# testDis

./: CMakeLists.txt
dependencies/dis7/: opendis7_export.h
src/: receiver.cpp  sender.cpp
